--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-12-31 10:18:48
-# Total rules: 12084
+# Generated from relevant_rules_wildcard_aware.txt on 2026-01-01 10:08:53
+# Total rules: 12114
 
 .08438rt742.netlify.app
 .09-0-2-erguj-3e54r9gh-w0e9jv-0sd8ghv-0das9jh-0hyf.obs.ap-southeast-1.myhuaweicloud.com
@@ -90,6 +90,7 @@
 .86uk.com
 .87104801.b-cdn.net
 .888.tv.sohu.com
+.8cgtll9rh8.data.adobedc.net
 .8inhjmd.usefathom.com
 .8rn1y79f02-1.algolianet.com
 .92x.tumblr.com
@@ -643,6 +644,7 @@
 .a25048791137.cdn.optimizely.com
 .a25050740378.cdn.optimizely.com
 .a25061800310.cdn.optimizely.com
+.a25064110354.cdn.optimizely.com
 .a25065940291.cdn.optimizely.com
 .a25067410829.cdn.optimizely.com
 .a25069340825.cdn.optimizely.com
@@ -981,6 +983,7 @@
 .a4706980296654848.cdn.optimizely.com
 .a4768898554265600.cdn.optimizely.com
 .a47b-collector-eu-alb-1031015564.eu-west-1.elb.amazonaws.com
+.a4804167382859776.cdn.optimizely.com
 .a4806508815319040.cdn.optimizely.com
 .a4808268718538752.cdn.optimizely.com
 .a48120048.cdn.optimizely.com
@@ -1003,6 +1006,7 @@
 .a523170811.cdn.optimizely.com
 .a524690941.cdn.optimizely.com
 .a5250744593416192.cdn.optimizely.com
+.a5263375337259008.cdn.optimizely.com
 .a5270536083734528.cdn.optimizely.com
 .a5271073.cdn.optimizely.com
 .a5292374380249088.cdn.optimizely.com
@@ -1039,6 +1043,7 @@
 .a5809436334227456.cdn.optimizely.com
 .a582891733.cdn.optimizely.com
 .a5838709522694144.cdn.optimizely.com
+.a5839278056407040.cdn.optimizely.com
 .a5877482797137920.cdn.optimizely.com
 .a591102174.cdn.optimizely.com
 .a5935064.cdn.optimizely.com
@@ -1054,6 +1059,7 @@
 .a61135178.cdn.optimizely.com
 .a6131884851.cdn.optimizely.com
 .a6136581106.cdn.optimizely.com
+.a6146157886308352.cdn.optimizely.com
 .a6147442509348864.cdn.optimizely.com
 .a6147784059912192.cdn.optimizely.com
 .a6169963916951552.cdn.optimizely.com
@@ -1061,9 +1067,10 @@
 .a6207300250632192.cdn.optimizely.com
 .a6207841426472960.cdn.optimizely.com
 .a6253774759526400.cdn.optimizely.com
+.a6263502310998016.cdn.optimizely.com
 .a627150995.cdn.optimizely.com
 .a6295702960078848.cdn.optimizely.com
-.a6354269197041664.cdn.optimizely.com
+.a6303072515784704.cdn.optimizely.com
 .a6372928330137600.cdn.optimizely.com
 .a6376052200046592.cdn.optimizely.com
 .a6451678757519360.cdn.optimizely.com
@@ -1174,7 +1181,6 @@
 .ac1.dcloud.net.cn
 .ac2.msn.com
 .ac3.msn.com
-.ac9olrggo8-default-cn.rum.aliyuncs.com
 .academy.com.data.adobedc.net
 .access-lgin-trzor.pages.dev
 .access-loggn-trezr.weebly.com
@@ -1182,6 +1188,7 @@
 .access-trerz-io-en.pages.dev
 .access-trezz-io-en.pages.dev
 .accountconfirm-managerpage-requestreview-verifynow.pages.dev
+.accredo.com.data.adobedc.net
 .accscdn.m.taobao.com
 .ace.naver.com
 .acfeedbackws.icloud.com
@@ -1564,6 +1571,7 @@
 .ads.music.126.net
 .ads.ne1.yahoo.com
 .ads.netflix.com
+.ads.nextdoor.com
 .ads.nonprod.webservices.mozgcp.net
 .ads.nwsource.com.edgesuite.net
 .ads.nytimes.com
@@ -1745,7 +1753,6 @@
 .advertising-api.amazon.com
 .advertising-eu.amazon.com
 .advertising.adobe.com
-.advertising.amazon.cn
 .advertising.amazon.co.jp
 .advertising.amazon.com
 .advertising.apple.com
@@ -1976,6 +1983,7 @@
 .analytics.bloomberg.com
 .analytics.brave.com
 .analytics.buy.yahoo.com
+.analytics.claro.com.br
 .analytics.clients6.google.com
 .analytics.cloud.coveo.com
 .analytics.cloud.unity3d.com
@@ -2027,6 +2035,7 @@
 .analytics.notify.elsevier.com.cdn.cloudflare.net
 .analytics.org.coveo.com
 .analytics.orghipaa.coveo.com
+.analytics.p04.eloqua.com
 .analytics.paddle.com
 .analytics.pangle-ads.com.edgesuite.net
 .analytics.pgncs.notion.so
@@ -2045,6 +2054,7 @@
 .analytics.selfh.st
 .analytics.services.jetbrains.com
 .analytics.sg.kaltura.com
+.analytics.shein.com
 .analytics.snssdk.com
 .analytics.spotify.com
 .analytics.status.atlassian.com
@@ -2398,6 +2408,7 @@
 .assistjs.skimresources.com
 .assp.sohu.com
 .astat-bugly-tgw4l.mig.tencent-cloud.net
+.astellasusllc.data.adobedc.net
 .at.pinduoduo.com
 .at3.doubanio.com
 .atanx.alicdn.com
@@ -2541,6 +2552,7 @@
 .beamanalytics.b-cdn.net
 .beap-bc.yahoo.com
 .bectondickinsonandcompany.data.adobedc.net
+.bedrosians.data.adobedc.net
 .beehiiv-adnetwork-production.s3.amazonaws.com
 .beizi.biz
 .bellsecuredloginfom-net.vercel.app
@@ -2584,6 +2596,7 @@
 .bksdkconfig.play.cp81.ott.cibntv.net
 .bksoup.v.qq.com
 .bla.gtimg.com
+.blackbaud.com.data.adobedc.net
 .blackhole-m.m.jd.com
 .blackhole.m.jd.com
 .blacktri-a.akamaihd.net
@@ -3097,6 +3110,7 @@
 .collector-px2e972lwz.px-cdn.net
 .collector-px2e972lwz.px-cloud.net
 .collector-px2sz8xyop.px-cloud.net
+.collector-px2yes24ut.px-cdn.net
 .collector-px2yes24ut.px-cloud.net
 .collector-px35v5ygcp.px-cloud.net
 .collector-px3c3ez9ug.px-cloud.net
@@ -3107,6 +3121,7 @@
 .collector-px3vk96i6i.px-cloud.net
 .collector-px3vk96i6i.pxchk.net
 .collector-px3zezcyxc.px-cloud.net
+.collector-px413gkwmt.px-cloud.net
 .collector-px41v9jz72.px-cdn.net
 .collector-px41v9jz72.px-cloud.net
 .collector-px41v9jz72.pxchk.net
@@ -3114,6 +3129,7 @@
 .collector-px46uwk7he.px-cloud.net
 .collector-px4i06uv8m.px-cloud.net
 .collector-px4iknbf6x.px-cloud.net
+.collector-px4oaqzwak.px-cloud.net
 .collector-px4uazuiai.px-cloud.net
 .collector-px4vmagn4o.px-cloud.net
 .collector-px551mn3nq.px-cloud.net
@@ -3127,6 +3143,7 @@
 .collector-px611dwqp1.pxchk.net
 .collector-px6a5i7vr2.px-cloud.net
 .collector-px6dv4bsnz.px-cloud.net
+.collector-px6s0wc5c7.px-cloud.net
 .collector-px6tnjz910.px-cdn.net
 .collector-px6tnjz910.px-cloud.net
 .collector-px6xnn2xkk.px-cloud.net
@@ -3138,6 +3155,7 @@
 .collector-px78vmo82c.px-cloud.net
 .collector-px78vmo82c.pxchk.net
 .collector-px7rns1bjj.px-cloud.net
+.collector-px7t66lsf8.px-cloud.net
 .collector-px7u8gdto7.px-cloud.net
 .collector-px7vv0zost.px-cloud.net
 .collector-px7zme8qdi.px-cdn.net
@@ -3172,10 +3190,12 @@
 .collector-pxaoit9cn0.px-cloud.net
 .collector-pxaotqiwnf.px-cloud.net
 .collector-pxawqdobrw.px-cloud.net
+.collector-pxaxpkcpxj.px-cloud.net
 .collector-pxaxvw3l5r.px-cloud.net
 .collector-pxb47t2jmz.px-cloud.net
 .collector-pxb5ezgwhw.px-cloud.net
 .collector-pxbdaexv9t.px-cloud.net
+.collector-pxbe3rqbur.px-cloud.net
 .collector-pxbia59zcf.px-cloud.net
 .collector-pxbj5oofe8.px-cloud.net
 .collector-pxc4jse0ao.px-cloud.net
@@ -3224,7 +3244,9 @@
 .collector-pxgeyljesk.px-cdn.net
 .collector-pxgeyljesk.px-cloud.net
 .collector-pxgeyljesk.pxchk.net
+.collector-pxghenmjv3.px-cloud.net
 .collector-pxghzdhy7f.px-cloud.net
+.collector-pxglfzcgpa.px-cloud.net
 .collector-pxgm4fv3vc.px-cloud.net
 .collector-pxgnttli3a.px-cloud.net
 .collector-pxgqnulzzy.px-cloud.net
@@ -3310,6 +3332,7 @@
 .collector-pxljub4etb.cl6.px-cloud.net
 .collector-pxlkxie7oj.px-cloud.net
 .collector-pxlo2z493j.px-cloud.net
+.collector-pxlo6pyvz5.px-cloud.net
 .collector-pxlsxlyya5.px-cloud.net
 .collector-pxlznv2dn4.px-cloud.net
 .collector-pxm0ea3jx0.px-cloud.net
@@ -3392,6 +3415,7 @@
 .collector-pxsmtpgl4l.px-cdn.net
 .collector-pxsmtpgl4l.px-cloud.net
 .collector-pxsp9yp3kw.px-cloud.net
+.collector-pxspn2silb.px-cloud.net
 .collector-pxsw1vemrh.px-cdn.net
 .collector-pxsw1vemrh.px-cloud.net
 .collector-pxsw1vemrh.pxchk.net
@@ -3586,6 +3610,7 @@
 .corpext.msitadfs.glbdns2.microsoft.com
 .cortalconsors1.data.adobedc.net
 .count.mail.163.com
+.count.shein.com
 .count.taobao.com
 .count.video.sina.com.cn
 .count.vrs.sohu.com
@@ -4939,7 +4964,6 @@
 .d3cgm8py10hi0z.cloudfront.net
 .d3ciks47fhh9wv.cloudfront.net
 .d3cjfvbj2wtj5n.cloudfront.net
-.d3cjsmbfrnuzqf.cloudfront.net
 .d3cl0ipbob7kki.cloudfront.net
 .d3cl7ldsgbm5qu.cloudfront.net
 .d3cod80thn7qnd.cloudfront.net
@@ -5354,6 +5378,7 @@
 .data.email-signify.cjm.adobe.com
 .data.email-tsb.cjm.adobe.com
 .data.email.podcast.adobe.com
+.data.email.premierleague.com.data.adobedc.net
 .data.emaillpb.adobe.com
 .data.eu.pendo.io
 .data.game.xiaomi.com
@@ -5361,7 +5386,6 @@
 .data.messaging.paypal.com
 .data.msn.com
 .data.news.paypal.com
-.data.news.paypal.com.data.adobedc.net
 .data.newsletter.paypal.com
 .data.pendo.io
 .data.qq.com
@@ -5690,6 +5714,7 @@
 .dmw2pzbenclyd.cloudfront.net
 .dmxhgf4zuwdvu.cloudfront.net
 .dmz3nd5oywtsw.cloudfront.net
+.dn-growing.qbox.me
 .dn0qt3r0xannq.cloudfront.net
 .dn34cbtcv9mef.cloudfront.net
 .dn3uy6cx65ujf.cloudfront.net
@@ -5987,6 +6012,7 @@
 .e1.o.lencr.org
 .e20d8e38992b.o3n.io
 .e77lmzbqou0n-a.akamaihd.net
+.e8u2tnpszf.data.adobedc.net
 .earth.cointelegraph.com
 .easygdpr.b-cdn.net
 .easytomessage.com
@@ -6015,6 +6041,7 @@
 .eduad.baidu.com
 .eec.crunchyroll.com
 .eel.transistor.fm
+.eex8nehrx0-default-cn.rum.aliyuncs.com
 .ef-dongfeng.tanx.com
 .ef69yesd00-default-cn.rum.aliyuncs.com
 .effect.snssdk.com
@@ -6060,6 +6087,7 @@
 .energyaustralia.data.adobedc.net
 .engagement-metrics-dpzmkkxlza-uc.a.run.app
 .engsuites.ghost.io
+.enova.data.adobedc.net
 .enrichgw.10010.com
 .ensighten.bhphoto.com
 .ensighten.com
@@ -6326,6 +6354,7 @@
 .flash.xiaohongshu.com
 .flashplayerfeedback.adobe.com
 .flashstats.libsyn.com
+.flask.us.nextdoor.com
 .flex.msn.com
 .flipdish-cookie-consent.s3-eu-west-1.amazonaws.com
 .floor.bz.mgtv.com
@@ -6838,7 +6867,6 @@
 .hm2wjuuus3.execute-api.ap-northeast-1.amazonaws.com
 .hme-live-loganalytics-namespace.servicebus.windows.net
 .hmma.baidu.com
-.hnpkxjfbax.data.adobedc.net
 .hog.crowdin.com
 .holaflylimited.data.adobedc.net
 .home.compete.com.edgesuite.net
@@ -6910,7 +6938,6 @@
 .hw-v2-web-player-tracker.biliapi.net
 .hwa.his.huawei.com
 .hwstats.unity3d.com
-.hwztx6svg3-default-cn.rum.aliyuncs.com
 .hxyhxsq4jc-sdk.rum.aliyuncs.com
 .hybrid.intl.xiaomi.com
 .hybrid.miniapp.taobao.com
@@ -7191,6 +7218,7 @@
 .ip.taobao.com
 .ip.ws.126.net
 .ipada.cafe.naver.com
+.iplocation-api.wp.trt.com.tr
 .ipservice.163.com
 .ipv4.kkmh.com
 .ipv4.music.163.com
@@ -7221,6 +7249,7 @@
 .itsdata.map.baidu.com
 .iu.snssdk.com
 .ivy.pconline.com.cn
+.ivypacfdyy.data.adobedc.net
 .iwallet-1258175138.file.myqcloud.com
 .iwan-s.video.qq.com
 .iwan.sogou.com
@@ -7231,7 +7260,6 @@
 .iyouxi3.vip.qq.com
 .j0v36abmdj.execute-api.us-east-1.amazonaws.com
 .j2c03hoppk-default-cn.rum.aliyuncs.com
-.j2e0xaqli6-default-cn.rum.aliyuncs.com
 .ja.gamersky.com
 .ja1.gamersky.com
 .ja2.gamersky.com
@@ -7566,7 +7594,6 @@
 .log.mgtv.com
 .log.mix.sina.com.cn
 .log.music.baidu.com
-.log.node.minigame.qq.com
 .log.nuomi.com
 .log.olark.com
 .log.optimizely.com
@@ -7698,18 +7725,11 @@
 .login.optimizely.com
 .logitech.com.data.adobedc.net
 .logn-trezr-account.weebly.com
-.logs-1.algolia.com
-.logs-2.algolia.com
-.logs-4.algolia.com
-.logs-5.algolia.com
-.logs-6.algolia.com
-.logs-7.algolia.com
-.logs-8.algolia.com
-.logs-9.algolia.com
 .logs.amap.com
 .logs.appsource.microsoft.com
 .logs.betterstack.com
 .logs.blip.net
+.logs.bloomberg.com
 .logs.browserstack.com
 .logs.chronosphere.io
 .logs.datadoghq.com
@@ -7897,6 +7917,7 @@
 .match.p4p.1688.com
 .matchbin-assets.s3.amazonaws.com
 .matomo-computerfloh-de.cdn.ampproject.org
+.matomo-production-313173901.us-east-2.elb.amazonaws.com
 .matomo-westnetz.germanywestcentral.cloudapp.azure.com
 .matomo-wpmudev-analytics1-925643958.us-east-2.elb.amazonaws.com
 .matomo-wpmudev-analytics2-742601353.us-east-2.elb.amazonaws.com
@@ -8351,6 +8372,8 @@
 .news-events.apple.com
 .news-notification-events.apple.com
 .news-sports-events.apple.com
+.news.paypal.com.data.adobedc.net
+.newscorpau.data.adobedc.net
 .newspush.sinajs.cn
 .newtest.wunderman-email.cjm.adobe.com
 .newton-api.ele.me
@@ -8364,7 +8387,6 @@
 .nexusrules.officeapps.live.com
 .nexxtv-events.servicebus.windows.net
 .nfa.jd.com
-.nflshop.com.data.adobedc.net
 .nfsvgvusih.data.adobedc.net
 .nhtradecfg.eastmoney.com
 .nifty-tracking-eastus-ext.eastus.cloudapp.azure.com
@@ -8375,7 +8397,6 @@
 .nitrous-analytics.s3.amazonaws.com
 .nj.t.bcsp2p.baidu.com
 .nl-rcd.iqiyi.com
-.nl.data.adobedc.net
 .nl.rcd.iqiyi.com
 .nlb-lnz2doj0ra6vlmexfu.cn-beijing.nlb.aliyuncs.com
 .nlog.baidu.com
@@ -8686,6 +8707,7 @@
 .pcdn.yximgs.com
 .pcfg.wps.cn
 .pchur.belkin.com
+.pclick.internal.yahoo.com
 .pclick.yahoo.com
 .pcm-img.zhls.qq.com
 .pcmx.autohome.com.cn
@@ -8805,7 +8827,6 @@
 .pinksales-pools.pages.dev
 .pipe.aria.microsoft.com
 .pipedream.wistia.com
-.pis-tel-pcdn.youku.com
 .piwik.fsfe.org
 .piwik.pcgamingwiki.com
 .piwik.wikimedia.org
@@ -9001,6 +9022,7 @@
 .pups.baidu.com
 .pups.bdimg.com
 .purchasingpower.com.data.adobedc.net
+.push-ads-cn.heytapmobi.com
 .push-service-ios.sginput.qq.com
 .push.126.net
 .push.app.autohome.com.cn
@@ -9156,6 +9178,7 @@
 .read.medium.com
 .reader.sh.vip.qq.com
 .reading-lq.snssdk.com
+.readmo.yahoo.com
 .readserver.cachefly.net
 .rec5.visualwebsiteoptimizer.com
 .recipe-tracker-cno2ebznoq-uc.a.run.app
@@ -9181,6 +9204,7 @@
 .rel.msn.com
 .relap.mail.ru
 .release.baidu.com
+.reliant.com.data.adobedc.net
 .reliantenergy.data.adobedc.net
 .reminders-infraction-account.netlify.app
 .removeads.workers.dev
@@ -10223,6 +10247,7 @@
 .server-side-tagging-y77zhtflyq-uc.a.run.app
 .server-side-tagging-ycrrucuimq-uc.a.run.app
 .server-side-tagging-yeml22e5lq-uc.a.run.app
+.server-side-tagging-yj2jtopgkq-uc.a.run.app
 .server-side-tagging-ykzfrilmoq-uc.a.run.app
 .server-side-tagging-yl2cfeamuq-uc.a.run.app
 .server-side-tagging-yl6427ynhq-uc.a.run.app
@@ -10438,7 +10463,6 @@
 .sophi.io
 .sorteiosbrasil.netlify.app
 .soup.v.qq.com
-.southernglazerswineandspiritscorp.data.adobedc.net
 .sovetnik.market.yandex.ru
 .sp-mms.weather.com
 .sp-wukong-tracker.b-cdn.net
@@ -10557,6 +10581,7 @@
 .stat.zol.com.cn
 .stat6.y.qq.com
 .statchecker.yandex.ru
+.statestreet.com.data.adobedc.net
 .static-addtoany-com.cdn.ampproject.org
 .static-doubleclick-net.l.google.com
 .static-res.qq.com
@@ -10724,6 +10749,7 @@
 .symplr-analytics-xddc4j3vva-ey.a.run.app
 .sync-yieldmo-com-tf-1869548451.eu-west-1.elb.amazonaws.com
 .synchrony.com.data.adobedc.net
+.synchronybank.com.data.adobedc.net
 .syncplusconfig.s3.amazonaws.com
 .syncwallet.pages.dev
 .syndicatedsearch.goog
@@ -10790,13 +10816,13 @@
 .tab.volces.com
 .taboola.com
 .tadadeai.weebly.com
+.tag-based.s3.ap-south-1.amazonaws.com
 .tagdelivery.mayoclinic.org
 .tagging-qadkfoj6ha-as.a.run.app
 .tags.aljazeera.com
 .tags.aljazeera.net
 .tags.voacantonese.com
 .tags.wsj.com
-.taiji.sina.cn
 .tajs.qq.com
 .talkback-public.mozilla.org
 .talkback-reports.mozilla.org
@@ -10892,6 +10918,7 @@
 .teredo.ipv6.microsoft.com
 .terminallog-76327.gzc.vod.tencent-cloud.com
 .terren.cntv.cn
+.tesco.com.data.adobedc.net
 .tescobankbarclays.data.adobedc.net
 .tescostores.data.adobedc.net
 .teslaamg.obs.cn-east-3.myhuaweicloud.com
@@ -11156,6 +11183,7 @@
 .tracking.mail.ti.com
 .tracking.mcdonalds.com.cn
 .tracking.miui.com
+.tracking.nextdoor.com
 .tracking.opencandy.com.s3.amazonaws.com
 .tracking.prd.mz.internal.unity3d.com
 .tracking.proquest.com
@@ -11418,6 +11446,7 @@
 .us-central1-r2u-analytics.cloudfunctions.net
 .us-east-1.elb.amazonaws.com
 .us-east-2.compute.amazonaws.com
+.us-tracking.nextdoor.com
 .us-west-2.compute.amazonaws.com
 .us-west-2.elb.amazonaws.com
 .us.a1.yimg.com
@@ -11617,6 +11646,7 @@
 .w3-reporting-csp.reddit.com
 .w3-reporting-nel.reddit.com
 .w3-reporting.reddit.com
+.w3counter.com
 .w4aa025brr.data.adobedc.net
 .w4o7aea80ss3-a.akamaihd.net
 .w5sac788c1.360doc.cn
@@ -11908,6 +11938,7 @@
 .youku-acs.m.taobao.com
 .youku-crm-product.youku.com
 .yourchatgptguide.gumroad.com
+.yourtrackingserver.data.adobedc.net
 .youxi.baidu.com
 .youxi.kugou.com
 .ys-log-upload.mihoyo.com
@@ -11918,7 +11949,6 @@
 .yt-adp.nosdn.127.net
 .yt-adp.ws.126.net
 .yt-adv.bn.netease.com
-.ytstatic.l.google.com
 .yuedu.iqiyi.com
 .yule.sohu.com
 .yun-hl.3g.qq.com
