--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2026-01-01 10:08:53
-# Total rules: 12114
+# Generated from relevant_rules_wildcard_aware.txt on 2026-01-01 20:37:11
+# Total rules: 12183
 
 .08438rt742.netlify.app
 .09-0-2-erguj-3e54r9gh-w0e9jv-0sd8ghv-0das9jh-0hyf.obs.ap-southeast-1.myhuaweicloud.com
@@ -1066,6 +1066,7 @@
 .a6194110778.cdn.optimizely.com
 .a6207300250632192.cdn.optimizely.com
 .a6207841426472960.cdn.optimizely.com
+.a6217617971609600.cdn.optimizely.com
 .a6253774759526400.cdn.optimizely.com
 .a6263502310998016.cdn.optimizely.com
 .a627150995.cdn.optimizely.com
@@ -1439,6 +1440,7 @@
 .admd.yam.com
 .admind.svideo.tcdn.qq.com
 .admixercreatives.blob.core.windows.net
+.admob-app-id-8523918641.firebaseio.com
 .admob-gmats.uc.r.appspot.com
 .admob.google.com
 .admob.googleapis.com
@@ -1916,6 +1918,7 @@
 .analy.qq.com
 .analyse.weather.com.cn
 .analysis.chatglm.cn
+.analytic.dab-eca.workers.dev
 .analytic.substack.com
 .analytics-alv.google.com
 .analytics-api-01.smzdm.com
@@ -3380,14 +3383,17 @@
 .collector-pxpftaypj9.px-cloud.net
 .collector-pxpjrhlr4n.px-cloud.net
 .collector-pxpmq1d3fb.px-cloud.net
+.collector-pxpo11g9ah.px-cloud.net
 .collector-pxpoll8wvh.px-cloud.net
 .collector-pxpum5xzzw.px-cdn.net
 .collector-pxpum5xzzw.px-cloud.net
 .collector-pxpvnjmp4g.px-cdn.net
 .collector-pxpvnjmp4g.px-cloud.net
 .collector-pxpvnjmp4g.pxchk.net
+.collector-pxpx6fss1c.px-cloud.net
 .collector-pxq2osncsa.px-cloud.net
 .collector-pxq99aloxk.px-cloud.net
+.collector-pxqegyaqlb.px-cloud.net
 .collector-pxqerrwgji.px-cloud.net
 .collector-pxqm4ecyhh.px-cloud.net
 .collector-pxqqxm841a.px-cloud.net
@@ -3459,8 +3465,10 @@
 .collector-pxvnpbbfwe.px-cloud.net
 .collector-pxvtb0vdec.px-cloud.net
 .collector-pxvtidnbtc.px-cloud.net
+.collector-pxvusaqeck.px-cloud.net
 .collector-pxw0g1k35b.px-cloud.net
 .collector-pxw2r2if6r.px-cloud.net
+.collector-pxw4hytpjs.px-cloud.net
 .collector-pxwbxurdun.px-cdn.net
 .collector-pxwbxurdun.px-cloud.net
 .collector-pxwjdtmg7v.px-cloud.net
@@ -3482,6 +3490,7 @@
 .collector-pxxt4gy2ig.px-cloud.net
 .collector-pxxtfdm2w9.px-cloud.net
 .collector-pxxyzdn30m.px-cloud.net
+.collector-pxy3cosaiv.px-cloud.net
 .collector-pxyirejba7.px-cloud.net
 .collector-pxyjwbujsx.px-cloud.net
 .collector-pxyo6yjwlb.px-cloud.net
@@ -3539,6 +3548,7 @@
 .concert.io
 .concertads-configs.vox-cdn.com
 .conde.digital
+.conduenttransportsolutionsinc.data.adobedc.net
 .conf-cn.dc.heytapmobi.com
 .conf-eu.dc.heytapmobi.com
 .conf-in.dc.heytapmobi.com
@@ -6107,6 +6117,7 @@
 .er.search.naver.com
 .erebor.douban.com
 .ereg.adobe.com
+.erladjb07r.data.adobedc.net
 .err-up.vivo.com.cn
 .err-up.vivoglobal.com
 .err.gflb.zztfly.com
@@ -6611,6 +6622,7 @@
 .godkc.com
 .golden1.sogou.com
 .golden1.sohu.com
+.goldenstatewarriorsllc.data.adobedc.net
 .goo-access-analytics.appspot.com
 .google-analytics.com
 .google-server-side-tag-manager-5s5tlofmdq-ew.a.run.app
@@ -6740,6 +6752,7 @@
 .hc-ssp.sm.cn
 .hc.baidu.com
 .hc.tdm.qq.com
+.hc16tz0u58-sdk.rum.aliyuncs.com
 .hcadv.video.ums.uc.cn
 .hcirentgh.360doc.cn
 .hd.mi.com
@@ -7260,6 +7273,7 @@
 .iyouxi3.vip.qq.com
 .j0v36abmdj.execute-api.us-east-1.amazonaws.com
 .j2c03hoppk-default-cn.rum.aliyuncs.com
+.j2e0xaqli6-default-cn.rum.aliyuncs.com
 .ja.gamersky.com
 .ja1.gamersky.com
 .ja2.gamersky.com
@@ -7553,6 +7567,7 @@
 .log-api.pangolin-sdk-toutiao.com.w.cdngslb.com
 .log-auth.zztfly.com
 .log-b8c1a2ee.we-stats.com
+.log-boot.capcutapi.com
 .log-eap-in.coloros.com
 .log-eap-sg.coloros.com
 .log-eap.coloros.com
@@ -7568,10 +7583,12 @@
 .log-ru.tiktokv.com
 .log-sdk.gifshow.com
 .log-sdk.ksapisrv.com
+.log-sg.capcutapi.com
 .log-upload-eur.mihoyo.com
 .log-upload-os.mihoyo.com
 .log-upload-v6.mihoyo.com
 .log-upload.mihoyo.com
+.log-v2-boot.capcutapi.com
 .log-va-useast2a.tiktokv.com
 .log-va.tiktokv.com
 .log-vietnamplus-vn.cdn.ampproject.org
@@ -7644,8 +7661,11 @@
 .log16-normal-c-useast1a.tiktokv.com
 .log16-normal-c-useast2a.tiktokv.com
 .log16-normal-delay-alisg.tiktokv.com
+.log16-normal-sg.capcutapi.com
+.log16-normal-us-ttp.capcutapi.us
 .log16-normal-useast1a.tiktokv.com
 .log16-normal-useast2a.tiktokv.com
+.log16-normal.capcutapi.com
 .log16-normal.tiktokv.com
 .log16-platform-ycru.tiktokv.com
 .log16-tmp-normal-useast1a.tiktokv.com
@@ -7681,9 +7701,11 @@
 .log31-normal-useast2a.tiktokv.com
 .log31-normal.tiktokv.com
 .log32-normal-alisg.tiktokv.com
+.log32-normal-sg.capcutapi.com
 .log32-normal-useast1a.tiktokv.com
 .log32-normal-useast2a.tiktokv.com
 .log32-normal-zr.tiktokv.com
+.log32-normal.capcutapi.com
 .log32-normal.tiktokv.com
 .log5-applog-hl.zijieapi.com
 .log5-applog-lf.zijieapi.com
@@ -7725,6 +7747,14 @@
 .login.optimizely.com
 .logitech.com.data.adobedc.net
 .logn-trezr-account.weebly.com
+.logs-1.algolia.com
+.logs-2.algolia.com
+.logs-3.algolia.com
+.logs-4.algolia.com
+.logs-5.algolia.com
+.logs-7.algolia.com
+.logs-8.algolia.com
+.logs-9.algolia.com
 .logs.amap.com
 .logs.appsource.microsoft.com
 .logs.betterstack.com
@@ -7957,14 +7987,19 @@
 .mclean.f.360.cn
 .mclick.simba.taobao.com
 .mcs-i18n.tiktok.com
+.mcs-normal-sg.capcutapi.com
 .mcs-sg.tiktok.com
 .mcs-ttp2.us.tiktok.com
+.mcs-v2-boot.capcutapi.com
 .mcs-va-useast2a.tiktokv.com
+.mcs-va.capcutapi.com
 .mcs-va.tiktok.com
 .mcs-va.tiktokv.com
+.mcs.capcutapi.us
 .mcs.us.tiktok.com
 .mcs.us.tiktokv.com
 .mcs.zijieapi.com
+.mcs16-normal-us-ttp.capcutapi.us
 .mdevstat.qqlive.qq.com
 .mdp-usertrace-cn.heytapmobi.com
 .mdt.qq.com
@@ -8160,19 +8195,24 @@
 .mobwsa.ximalaya.com
 .modern.watson.data.microsoft.com.akadns.net
 .moduleanalysis.aliexpress.com
+.mon-boot.capcutapi.com
 .mon-boot.tiktokv.com
 .mon-csj-maliva-ios.byteoversea.com
 .mon-hl.snssdk.com
 .mon-i18n.tiktokv.com
 .mon-phx.tiktokv.com
 .mon-ru.tiktokv.com
+.mon-sg.capcutapi.com
 .mon-sg.tiktokv.com
 .mon-useast2a.tiktokv.com
+.mon-v2-boot.capcutapi.com
 .mon-va-useast2a.byteoversea.com
 .mon-va.byteoversea.com
+.mon-va.capcutapi.com
 .mon-va.tiktokv.com
 .mon.be.xiaomi.com
 .mon.byteoversea.com
+.mon.capcutapi.us
 .mon.n.xiaomi.com
 .mon.snssdk.com
 .mon.tiktokv.com
@@ -8180,7 +8220,10 @@
 .mon.us.tiktokv.com
 .mon.zijieapi.com
 .mon15-normal-useast1a.tiktokv.com
+.mon16-normal-sg.capcutapi.com
+.mon16-normal-us-ttp.capcutapi.us
 .mon16-normal-useast1a.tiktokv.com
+.mon32-normal-sg.capcutapi.com
 .monbk.tiktokv.com
 .monitor-frontend-collector.a.bybit-aws.com
 .monitor-stsdk.vivo.com.cn
@@ -8243,17 +8286,20 @@
 .mssdk-ru.tiktokv.com
 .mssdk-sg-bu.byteoversea.com
 .mssdk-sg.byteoversea.com
+.mssdk-sg.capcutapi.com
 .mssdk-sg.tiktokv.com
 .mssdk-va-useast2a.byteoversea.com
 .mssdk-va-useast2a.tiktokv.com
 .mssdk-va.byteoversea.com
 .mssdk.bytedance.com
+.mssdk.capcutapi.us
 .mssdk.snssdk.com
 .mssdk.us.tiktok.com
 .mssdk.us.tiktokv.com
 .mssdk.volces.com
 .mssdk.zijieapi.com
 .mssdk16-normal-alisg.tiktokv.com
+.mssdk16-normal-sg.capcutapi.com
 .mssdk16-normal-useast1a.tiktokv.com
 .mssdk16-normal-useast2a.tiktokv.com
 .mssdk16-platform-useast5.us.tiktokv.com
@@ -8269,6 +8315,7 @@
 .mssdk3-normal-lf.zijieapi.com
 .mssdk3-normal-lq.zijieapi.com
 .mssdk3-normal-zjg.zijieapi.com
+.mssdk32-normal-sg.capcutapi.com
 .mssdk5-normal-hl.zijieapi.com
 .mssdk5-normal-lf.zijieapi.com
 .mssdk5-normal-lq.zijieapi.com
@@ -8351,6 +8398,7 @@
 .ndct-data.video.iqiyi.com
 .ndstage.wpengine.com
 .nearby.3g.qq.com
+.nedbank.data.adobedc.net
 .neirong.baidu.com
 .neptune-api.volces.com
 .neptune-platform.zijieapi.com
@@ -8458,6 +8506,7 @@
 .o2o-ad-dev.oss-cn-shanghai.aliyuncs.com
 .o2o.api.xiaomi.com
 .o9tt6h08li.execute-api.eu-west-1.amazonaws.com
+.oa5fwn9lvq.data.adobedc.net
 .oalipay-dl-django.alicdn.com
 .observe.gitlab.com
 .obus-cn.dc.heytapmobi.com
@@ -8613,7 +8662,12 @@
 .p06.sc.origins.en25.com
 .p1-dpa.byteimg.com
 .p1-feedback.byteimg.com
+.p16-ad-sg.ibyteimg.com
+.p16-ad-site-sign-sg.ibyteimg.com
 .p16-ad.byteoversea.com
+.p16-tiktok-ads-sg.ibyteimg.com
+.p19-ad-site-sign-sg.ibyteimg.com
+.p21-ad-sg.ibyteimg.com
 .p2a-json-origin.brave.com
 .p2a-json.brave.com
 .p2a-json.bravesoftware.com
@@ -8694,9 +8748,13 @@
 .pbjs-stream.bydata.com
 .pbs.lenovomm.com
 .pbstck.com
+.pc-mon-boot.capcutapi.com
+.pc-mon-normal-sg.capcutapi.com
+.pc-mon-v2-boot.capcutapi.com
 .pc-mon-va.byteoversea.com
 .pc-mon.snssdk.com
 .pc-mon.zijieapi.com
+.pc-mon16-normal-us-ttp.capcutapi.us
 .pc-tc.s3-eu-west-1.amazonaws.com
 .pc.uf.ksosoft.com
 .pc.videoclick.baidu.com
@@ -8827,6 +8885,7 @@
 .pinksales-pools.pages.dev
 .pipe.aria.microsoft.com
 .pipedream.wistia.com
+.pis-tel-pcdn.youku.com
 .piwik.fsfe.org
 .piwik.pcgamingwiki.com
 .piwik.wikimedia.org
@@ -9632,11 +9691,13 @@
 .sentry.bits-363.workers.dev
 .sentry.cointelegraph.com
 .sentry.csdn.net
+.sentry.d.mi.com
 .sentry.d.xiaomi.net
 .sentry.gitcode.com
 .sentry.hcaptcha.com
 .sentry.indeed.com.cdn.cloudflare.net
 .sentry.io
+.sentry.kuaishou.com
 .sentry.kugou.com
 .sentry.lx.netease.com
 .sentry.maimemo.com
@@ -10622,6 +10683,7 @@
 .stats.economist.com
 .stats.fastcompany.com
 .stats.fifthstarlabs.io
+.stats.figshare.com
 .stats.ign.com
 .stats.kaltura.com
 .stats.kde.org
@@ -11007,7 +11069,12 @@
 .tmisc.home.news.cn
 .tmobileusa.data.adobedc.net
 .tmx.bestbuy.com
+.tnc-boot.capcutapi.com
 .tnc-boot.tiktokv.com
+.tnc-sg.capcutapi.com
+.tnc-v2-boot.capcutapi.com
+.tnc-va-us-looki.capcutapi.com
+.tnc-va.capcutapi.com
 .tnc0-aliec2.zijieapi.com
 .tnc0-alisc1.zijieapi.com
 .tnc0-bjlgy.zijieapi.com
@@ -11020,6 +11087,7 @@
 .tnc100-useast1a.tiktokv.com
 .tnc100-useast2a.tiktokv.com
 .tnc16-alisg.byteoversea.com
+.tnc16-normal-us-ttp.capcutapi.us
 .tnc16-normal-useast8.us.tiktokv.com
 .tnc16-normal-zr-alisg.tiktokv.com
 .tnc16-normal-zr-useast1a.tiktokv.com
@@ -11949,6 +12017,7 @@
 .yt-adp.nosdn.127.net
 .yt-adp.ws.126.net
 .yt-adv.bn.netease.com
+.ytstatic.l.google.com
 .yuedu.iqiyi.com
 .yule.sohu.com
 .yun-hl.3g.qq.com
