--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2026-01-01 20:37:11
-# Total rules: 12183
+# Generated from relevant_rules_wildcard_aware.txt on 2026-01-02 11:58:51
+# Total rules: 12170
 
 .08438rt742.netlify.app
 .09-0-2-erguj-3e54r9gh-w0e9jv-0sd8ghv-0das9jh-0hyf.obs.ap-southeast-1.myhuaweicloud.com
@@ -58,6 +58,7 @@
 .3dns.adobe.com
 .3e9le7p41u.data.adobedc.net
 .3gimg.qq.com
+.3gl.net
 .3j0pw4ed7uac-a.akamaihd.net
 .3kbmk3nerc.data.adobedc.net
 .3lift.com
@@ -1043,7 +1044,6 @@
 .a5809436334227456.cdn.optimizely.com
 .a582891733.cdn.optimizely.com
 .a5838709522694144.cdn.optimizely.com
-.a5839278056407040.cdn.optimizely.com
 .a5877482797137920.cdn.optimizely.com
 .a591102174.cdn.optimizely.com
 .a5935064.cdn.optimizely.com
@@ -1399,7 +1399,6 @@
 .adeventtracker.spotify.com
 .adeventtrackermonitoring.spotify.com
 .adfilter.imtt.qq.com
-.adfinix-ads.sgp1.cdn.digitaloceanspaces.com
 .adfl.qq.com
 .adfox.yandex.ru
 .adfstat.yandex.ru
@@ -1876,7 +1875,6 @@
 .aliyaoberbrunnergreg21.myshopify.com
 .ally.data.adobedc.net
 .alphaupsell.s3.ap-northeast-2.amazonaws.com
-.alpwiijq5x.data.adobedc.net
 .als-svc.nytimes.com
 .alt-ad.mail.ru
 .alterramountaincompany.data.adobedc.net
@@ -1907,6 +1905,7 @@
 .ams-ads-cornerstone-creatives.s3.amazonaws.com
 .ams-pageview-public.s3.amazonaws.com
 .ams.lenovomm.com
+.amz-recover-sign.s3.eu-west-1.amazonaws.com
 .an.constantcontact.com
 .an.facebook.com
 .an.mail.ru
@@ -2019,7 +2018,6 @@
 .analytics.itunes.apple.com
 .analytics.kaltura.com
 .analytics.live.com
-.analytics.lon.appsvc.an.adobe.com
 .analytics.macpaw.com
 .analytics.mall.yahoo.com
 .analytics.map.qq.com
@@ -2065,7 +2063,6 @@
 .analytics.support.supercell.com
 .analytics.taobao.com
 .analytics.tiktok.com
-.analytics.ton.org
 .analytics.twitter.com
 .analytics.uca.cloud.unity3d.com
 .analytics.umami.is
@@ -2363,6 +2360,7 @@
 .as.com.data.adobedc.net
 .as.mgtv.com
 .as.weixin.qq.com
+.as.wiley.com
 .as1.wenku.baidu.com
 .ascpqnj-oam.global.ssl.fastly.net
 .asearch.alicdn.com
@@ -2508,7 +2506,6 @@
 .bbangads.b-cdn.net
 .bc-ad-vod.zdmimg.com
 .bc.qunar.com
-.bcbsks.data.adobedc.net
 .bcd.caiyunapp.com
 .bcdn-dbff2e04.we-stats.com
 .bcdn-god.we-stats.com
@@ -2555,7 +2552,6 @@
 .beamanalytics.b-cdn.net
 .beap-bc.yahoo.com
 .bectondickinsonandcompany.data.adobedc.net
-.bedrosians.data.adobedc.net
 .beehiiv-adnetwork-production.s3.amazonaws.com
 .beizi.biz
 .bellsecuredloginfom-net.vercel.app
@@ -2650,7 +2646,6 @@
 .bn4sch101123202.wns.windows.com
 .bn4sch102110124.wns.windows.com
 .bnc-papago.naver.com
-.bnpp2s.data.adobedc.net
 .bobo.163.com
 .bobo.corp.163.com
 .bole.shangshufang.ksosoft.com
@@ -3124,7 +3119,6 @@
 .collector-px3vk96i6i.px-cloud.net
 .collector-px3vk96i6i.pxchk.net
 .collector-px3zezcyxc.px-cloud.net
-.collector-px413gkwmt.px-cloud.net
 .collector-px41v9jz72.px-cdn.net
 .collector-px41v9jz72.px-cloud.net
 .collector-px41v9jz72.pxchk.net
@@ -3158,7 +3152,6 @@
 .collector-px78vmo82c.px-cloud.net
 .collector-px78vmo82c.pxchk.net
 .collector-px7rns1bjj.px-cloud.net
-.collector-px7t66lsf8.px-cloud.net
 .collector-px7u8gdto7.px-cloud.net
 .collector-px7vv0zost.px-cloud.net
 .collector-px7zme8qdi.px-cdn.net
@@ -3194,12 +3187,10 @@
 .collector-pxaotqiwnf.px-cloud.net
 .collector-pxawqdobrw.px-cloud.net
 .collector-pxaxpkcpxj.px-cloud.net
-.collector-pxaxvw3l5r.px-cloud.net
 .collector-pxb47t2jmz.px-cloud.net
 .collector-pxb5ezgwhw.px-cloud.net
 .collector-pxbdaexv9t.px-cloud.net
 .collector-pxbe3rqbur.px-cloud.net
-.collector-pxbia59zcf.px-cloud.net
 .collector-pxbj5oofe8.px-cloud.net
 .collector-pxc4jse0ao.px-cloud.net
 .collector-pxcfrcfefa.px-cloud.net
@@ -3264,7 +3255,6 @@
 .collector-pxhd2cxrgh.px-cloud.net
 .collector-pxhdpvz3pi.px-cloud.net
 .collector-pxhi2twrim.px-cloud.net
-.collector-pxhmsaa2g7.px-cloud.net
 .collector-pxhp4b16gp.px-cloud.net
 .collector-pxhsy3fa0i.px-cloud.net
 .collector-pxhvq8lrlb.px-cdn.net
@@ -3335,7 +3325,6 @@
 .collector-pxljub4etb.cl6.px-cloud.net
 .collector-pxlkxie7oj.px-cloud.net
 .collector-pxlo2z493j.px-cloud.net
-.collector-pxlo6pyvz5.px-cloud.net
 .collector-pxlsxlyya5.px-cloud.net
 .collector-pxlznv2dn4.px-cloud.net
 .collector-pxm0ea3jx0.px-cloud.net
@@ -3421,7 +3410,6 @@
 .collector-pxsmtpgl4l.px-cdn.net
 .collector-pxsmtpgl4l.px-cloud.net
 .collector-pxsp9yp3kw.px-cloud.net
-.collector-pxspn2silb.px-cloud.net
 .collector-pxsw1vemrh.px-cdn.net
 .collector-pxsw1vemrh.px-cloud.net
 .collector-pxsw1vemrh.pxchk.net
@@ -3462,7 +3450,6 @@
 .collector-pxvl48pwoc.px-cloud.net
 .collector-pxvlufj7uv.px-cdn.net
 .collector-pxvlufj7uv.px-cloud.net
-.collector-pxvnpbbfwe.px-cloud.net
 .collector-pxvtb0vdec.px-cloud.net
 .collector-pxvtidnbtc.px-cloud.net
 .collector-pxvusaqeck.px-cloud.net
@@ -5389,6 +5376,7 @@
 .data.email-tsb.cjm.adobe.com
 .data.email.podcast.adobe.com
 .data.email.premierleague.com.data.adobedc.net
+.data.email1.wiley.com
 .data.emaillpb.adobe.com
 .data.eu.pendo.io
 .data.game.xiaomi.com
@@ -5697,6 +5685,7 @@
 .dltvkwr7nbdlj.cloudfront.net
 .dlvds9i67c60j.cloudfront.net
 .dlxk2dj1h3e83.cloudfront.net
+.dm-event.net
 .dm-hl.toutiao.com
 .dm.bytedance.com
 .dm.pstatp.com
@@ -5709,6 +5698,7 @@
 .dm62uysn32ppt.cloudfront.net
 .dm7gsepi27zsx.cloudfront.net
 .dm7ii62qkhy9z.cloudfront.net
+.dmads.dailymotion.com
 .dmapp.youku.com
 .dmc1acwvwny3.cloudfront.net
 .dmdigbrzjbmso.cloudfront.net
@@ -5723,6 +5713,7 @@
 .dmtw0i4zln92b.cloudfront.net
 .dmw2pzbenclyd.cloudfront.net
 .dmxhgf4zuwdvu.cloudfront.net
+.dmxleo.dailymotion.com
 .dmz3nd5oywtsw.cloudfront.net
 .dn-growing.qbox.me
 .dn0qt3r0xannq.cloudfront.net
@@ -5769,6 +5760,7 @@
 .doc830ytc7pyp.cloudfront.net
 .docer.com
 .docerad.wps.cn
+.doceree.com
 .docj27ko03fnu.cloudfront.net
 .dodk8rb03jif9.cloudfront.net
 .dof9zd9l290mz.cloudfront.net
@@ -6063,7 +6055,6 @@
 .ehd.baike.com
 .eic-ngfts.lge.com
 .eiv.baidu.com
-.ejq1qqrg3x.data.adobedc.net
 .elcorteingles.data.adobedc.net
 .eldoradottfha.dataplane.rudderstack.com
 .elements.video
@@ -6557,6 +6548,7 @@
 .geoedge.be
 .geolocation.forbes.com
 .geolocation.nexusmedia.workers.dev
+.geonedgia-parquet-files.s3.us-west-1.amazonaws.com
 .geotargetly-1a441.appspot.com
 .gepush.com
 .germanytechsupport.pages.dev
@@ -6655,6 +6647,7 @@
 .gpp.privacymanager.io
 .gr-gallery-hornyvideos4free-gr.netlify.app
 .grand.ele.me
+.grapeshot.co.uk
 .graph-fallback.instagram.com
 .graph.instagram.com
 .grasimindustries.data.adobedc.net
@@ -6881,7 +6874,6 @@
 .hme-live-loganalytics-namespace.servicebus.windows.net
 .hmma.baidu.com
 .hog.crowdin.com
-.holaflylimited.data.adobedc.net
 .home.compete.com.edgesuite.net
 .homeborn.cn
 .homepage-trezer-doc.pages.dev
@@ -6934,6 +6926,7 @@
 .hubble-se-logs.s3.amazonaws.com
 .hubble.netease.com
 .hubcloud.com.cn
+.hubvisor.io
 .hudong.alicdn.com
 .hugelog.fcbox.com
 .hui.sohu.com
@@ -7066,9 +7059,11 @@
 .images.it.business.samsung.com
 .images.mailing.morningstar.com
 .images.nasdaqtech.nasdaq.com
+.images.news.wiley.com
 .images.newsletter.larksuite.com
 .images.partnersupport.samsung.com
 .images.pinduoduo.com
+.images.publishing.wiley.com
 .images.reldirect.lenovo.com
 .images.smbdirect.lenovo.com
 .images.sohu.com
@@ -7362,7 +7357,6 @@
 .kde.qq.com
 .kepler.jd.com
 .keplerapi.jd.com
-.kew3pculob.data.adobedc.net
 .key.com.data.adobedc.net
 .keyrotate.qq.com
 .kgb-ifs.tanx.com
@@ -7423,7 +7417,6 @@
 .l.msdl.naver.com
 .l.premium.naver.com
 .l.qq.com
-.l.rcd.iqiyi.com
 .l.support.canva.com
 .l.www.naver.com
 .l.ykimg.com
@@ -7745,7 +7738,6 @@
 .loggw.alipay.com.cn
 .login-ourtime.members-datings.workers.dev
 .login.optimizely.com
-.logitech.com.data.adobedc.net
 .logn-trezr-account.weebly.com
 .logs-1.algolia.com
 .logs-2.algolia.com
@@ -7878,7 +7870,6 @@
 .luimg.baidu.com
 .lupic.cdn.bcebos.com
 .lvip.youku.com
-.lvm5ybt1fm.data.adobedc.net
 .lx0.meituan.com
 .lxcdn.dl.files.xiaomi.net
 .lycamobileuklimited.data.adobedc.net
@@ -7933,7 +7924,6 @@
 .marphezis.com
 .marriottvacationclub.com.data.adobedc.net
 .mars.jd.com
-.marshandmclennan.data.adobedc.net
 .martech.condenastdigital.com
 .masdk.3g.qq.com
 .masdkv6.3g.qq.com
@@ -7947,7 +7937,6 @@
 .match.p4p.1688.com
 .matchbin-assets.s3.amazonaws.com
 .matomo-computerfloh-de.cdn.ampproject.org
-.matomo-production-313173901.us-east-2.elb.amazonaws.com
 .matomo-westnetz.germanywestcentral.cloudapp.azure.com
 .matomo-wpmudev-analytics1-925643958.us-east-2.elb.amazonaws.com
 .matomo-wpmudev-analytics2-742601353.us-east-2.elb.amazonaws.com
@@ -8445,7 +8434,6 @@
 .nitrous-analytics.s3.amazonaws.com
 .nj.t.bcsp2p.baidu.com
 .nl-rcd.iqiyi.com
-.nl.rcd.iqiyi.com
 .nlb-lnz2doj0ra6vlmexfu.cn-beijing.nlb.aliyuncs.com
 .nlog.baidu.com
 .nmetrics.samsung.com
@@ -9220,6 +9208,7 @@
 .rawtelemetry-west.servicebus.windows.net
 .rbs.data.adobedc.net
 .rc.snssdk.com
+.rcd.iqiyi.com
 .rcgi.video.qq.com
 .rcm-cn.amazon.cn
 .rcm-images.amazon.com
@@ -9593,6 +9582,7 @@
 .scv-cafe.io.naver.com
 .sd-tagging.azurefd.net
 .sdac.lenovomm.com
+.sdata.wiley.com
 .sdb.amazonaws.com
 .sdfp.snssdk.com
 .sdk-config.tanx.com
@@ -9632,7 +9622,6 @@
 .seal.godaddy.com
 .sealine.youku.com
 .seao.business.samsung.com
-.search-hll-dev-analytics-jn2doyvzdresfegp673q3pdn3m.eu-west-1.es.amazonaws.com
 .search.anonymous.ads.brave.com
 .search.miui.com
 .searchad-phinf.pstatic.net
@@ -9714,6 +9703,7 @@
 .sentry.tapsvc.io.cdn.cloudflare.net
 .sentry.walletbot.me
 .sentry.workflowy.com
+.sentry.xiaoyuzhoufm.com
 .sentry.zendesk.com
 .sentry2.lx.netease.com
 .sentry22.cointelegraph.com
@@ -9788,6 +9778,7 @@
 .server-side-tagging-539248051146.us-central1.run.app
 .server-side-tagging-53asoamuvq-uk.a.run.app
 .server-side-tagging-546829201795.europe-west2.run.app
+.server-side-tagging-555503985895.europe-west4.run.app
 .server-side-tagging-5bttyxmdra-uc.a.run.app
 .server-side-tagging-5cnlj4axba-uc.a.run.app
 .server-side-tagging-5dqhkzpalq-uc.a.run.app
@@ -10811,7 +10802,6 @@
 .symplr-analytics-xddc4j3vva-ey.a.run.app
 .sync-yieldmo-com-tf-1869548451.eu-west-1.elb.amazonaws.com
 .synchrony.com.data.adobedc.net
-.synchronybank.com.data.adobedc.net
 .syncplusconfig.s3.amazonaws.com
 .syncwallet.pages.dev
 .syndicatedsearch.goog
@@ -10878,7 +10868,6 @@
 .tab.volces.com
 .taboola.com
 .tadadeai.weebly.com
-.tag-based.s3.ap-south-1.amazonaws.com
 .tagdelivery.mayoclinic.org
 .tagging-qadkfoj6ha-as.a.run.app
 .tags.aljazeera.com
@@ -10980,7 +10969,6 @@
 .teredo.ipv6.microsoft.com
 .terminallog-76327.gzc.vod.tencent-cloud.com
 .terren.cntv.cn
-.tesco.com.data.adobedc.net
 .tescobankbarclays.data.adobedc.net
 .tescostores.data.adobedc.net
 .teslaamg.obs.cn-east-3.myhuaweicloud.com
@@ -11634,6 +11622,7 @@
 .vg09-met-vgwort-de.cdn.ampproject.org
 .vg10-met-vgwort-de.cdn.ampproject.org
 .vgje4p095rtg-h43e-g9fhvnew-rp0hvg-e3hgrgrg.obs.sa-brazil-1.myhuaweicloud.com
+.vgwort.de
 .vhotlxp.video.qq.com
 .vhotwsh.video.qq.com
 .vi.xiaohongshu.com
@@ -11715,7 +11704,6 @@
 .w3-reporting-nel.reddit.com
 .w3-reporting.reddit.com
 .w3counter.com
-.w4aa025brr.data.adobedc.net
 .w4o7aea80ss3-a.akamaihd.net
 .w5sac788c1.360doc.cn
 .w8.com.cn
@@ -11759,7 +11747,6 @@
 .wcs.naver.com
 .wcs.naver.net
 .wct.softonic.com
-.wdbvhtupcp.data.adobedc.net
 .wdfl.co
 .wdp.brave.com
 .wdpro.data.adobedc.net
