--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2026-01-04 10:02:22
-# Total rules: 12158
+# Generated from relevant_rules_wildcard_aware.txt on 2026-01-05 09:55:52
+# Total rules: 12171
 
 .08438rt742.netlify.app
 .09-0-2-erguj-3e54r9gh-w0e9jv-0sd8ghv-0das9jh-0hyf.obs.ap-southeast-1.myhuaweicloud.com
@@ -68,7 +68,6 @@
 .3rdupgrade.pandora.xiaomi.com
 .3site-rss.s3-ap-northeast-1.amazonaws.com
 .4-happyending.blogspot.com
-.463m-default-cn.rum.aliyuncs.com
 .4hfvbao1ea.execute-api.ap-northeast-2.amazonaws.com
 .5-c3.bigdata.ctc.neo.xiaomi.com
 .51.la
@@ -1066,15 +1065,16 @@
 .a627150995.cdn.optimizely.com
 .a6295702960078848.cdn.optimizely.com
 .a6303072515784704.cdn.optimizely.com
+.a6354269197041664.cdn.optimizely.com
 .a6372928330137600.cdn.optimizely.com
 .a6376052200046592.cdn.optimizely.com
-.a6403762990874624.cdn.optimizely.com
 .a6451678757519360.cdn.optimizely.com
 .a6502622515.cdn.optimizely.com
 .a6504733288955904.cdn.optimizely.com
 .a6510400228294656.cdn.optimizely.com
 .a6524475903049728.cdn.optimizely.com
 .a6529002483.cdn.optimizely.com
+.a6532462424096768.cdn.optimizely.com
 .a6558036.cdn.optimizely.com
 .a6561280243.cdn.optimizely.com
 .a6582070441.cdn.optimizely.com
@@ -1751,7 +1751,6 @@
 .advertising-api.amazon.com
 .advertising-eu.amazon.com
 .advertising.adobe.com
-.advertising.amazon.cn
 .advertising.amazon.co.jp
 .advertising.amazon.com
 .advertising.apple.com
@@ -1871,9 +1870,9 @@
 .alitui.weibo.com
 .aliunion.cn.yahoo.com
 .aliyaoberbrunnergreg21.myshopify.com
-.alliancedata.data.adobedc.net
 .ally.data.adobedc.net
 .alphaupsell.s3.ap-northeast-2.amazonaws.com
+.alpwiijq5x.data.adobedc.net
 .als-svc.nytimes.com
 .alt-ad.mail.ru
 .alterramountaincompany.data.adobedc.net
@@ -2800,6 +2799,7 @@
 .campaign.adobe.com
 .campaigncs-dra.himovie.hicloud.com
 .cams.xvideos.com
+.canadiantire.data.adobedc.net
 .capi.voice.gcloud.qq.com
 .capitalone-analytics.digital-cloud.medallia.com
 .capture.condenastdigital.com
@@ -2832,6 +2832,7 @@
 .ccc-x.jd.com
 .ccclub.cmbchina.com
 .ccgateway.net
+.cchridx27a.data.adobedc.net
 .ccpa-wrapper.privacymanager.io
 .ccpa.privacymanager.io
 .cd-ladsp-com.s3.amazonaws.com
@@ -2924,7 +2925,6 @@
 .cimb.data.adobedc.net
 .cir-smart.baidu.com
 .cirrus-full-snapshots-track-csv-v1-0-eu-prod.s3.eu-west-1.amazonaws.com
-.citgroup.data.adobedc.net
 .citrixanalyticseh-alias.servicebus.windows.net
 .citrixanalyticseh.servicebus.windows.net
 .citrixanalyticseh2-alias.servicebus.windows.net
@@ -3065,6 +3065,7 @@
 .co-vcode-api.vivoglobal.com
 .co-vcode-od.vivoglobal.com
 .co-vcode-or.vivoglobal.com
+.co.data.adobedc.net
 .cocojen.cdn.bcebos.com
 .col.eum-appdynamics.com
 .collect.alipay.com
@@ -3097,7 +3098,6 @@
 .collector-px1wqvvfc0.px-cloud.net
 .collector-px24c5soup.px-cloud.net
 .collector-px27m703hm.px-cloud.net
-.collector-px2bgppb9a.px-cloud.net
 .collector-px2bubkzbv.px-cloud.net
 .collector-px2e972lwz.px-cdn.net
 .collector-px2e972lwz.px-cloud.net
@@ -3119,7 +3119,6 @@
 .collector-px46uwk7he.px-cloud.net
 .collector-px4i06uv8m.px-cloud.net
 .collector-px4iknbf6x.px-cloud.net
-.collector-px4oaqzwak.px-cloud.net
 .collector-px4uazuiai.px-cloud.net
 .collector-px4vmagn4o.px-cloud.net
 .collector-px551mn3nq.px-cloud.net
@@ -3139,6 +3138,7 @@
 .collector-px6xnn2xkk.px-cloud.net
 .collector-px6yz0qmxv.px-cloud.net
 .collector-px6zcfgh4h.px-cdn.net
+.collector-px6zcfgh4h.px-cloud.net
 .collector-px78vmo82c.px-cdn.net
 .collector-px78vmo82c.px-cloud.net
 .collector-px78vmo82c.pxchk.net
@@ -3176,7 +3176,6 @@
 .collector-pxaoit9cn0.px-cloud.net
 .collector-pxaotqiwnf.px-cloud.net
 .collector-pxawqdobrw.px-cloud.net
-.collector-pxaxvw3l5r.px-cloud.net
 .collector-pxb47t2jmz.px-cloud.net
 .collector-pxb5ezgwhw.px-cloud.net
 .collector-pxbdaexv9t.px-cloud.net
@@ -3193,6 +3192,7 @@
 .collector-pxcypqynpz.px-cloud.net
 .collector-pxczdhf737.px-cloud.net
 .collector-pxd74ztjof.px-cloud.net
+.collector-pxda70pf8l.px-cloud.net
 .collector-pxdfu0nb9z.px-cloud.net
 .collector-pxdiygqmfm.px-cloud.net
 .collector-pxdkqo2nt9.px-cdn.net
@@ -3420,6 +3420,7 @@
 .collector-pxu6b0qd2s.pxchk.net
 .collector-pxucva8b9y.px-cloud.net
 .collector-pxuem2xini.px-cloud.net
+.collector-pxumwut9do.px-cloud.net
 .collector-pxur63h57z.px-cloud.net
 .collector-pxuueaxf9p.px-cloud.net
 .collector-pxv1hqbvho.px-cloud.net
@@ -3431,6 +3432,7 @@
 .collector-pxvl48pwoc.px-cloud.net
 .collector-pxvlufj7uv.px-cdn.net
 .collector-pxvlufj7uv.px-cloud.net
+.collector-pxvtb0vdec.px-cloud.net
 .collector-pxvtidnbtc.px-cloud.net
 .collector-pxw0g1k35b.px-cloud.net
 .collector-pxw2r2if6r.px-cloud.net
@@ -3757,6 +3759,7 @@
 .d12lysxt2c11pc.cloudfront.net
 .d12nvv2jqzsaax.cloudfront.net
 .d12t7h1bsbq1cs.cloudfront.net
+.d12tgvynb5e7un.cloudfront.net
 .d12tu1kocp8e8u.cloudfront.net
 .d12ylqdkzgcup5.cloudfront.net
 .d12zgccgt6pwjz.cloudfront.net
@@ -5922,6 +5925,7 @@
 .dwene4pgj0r33.cloudfront.net
 .dwf6crl4raal7.cloudfront.net
 .dwfbs38k9z6bu.cloudfront.net
+.dwin1.com
 .dwnm2295blvjq.cloudfront.net
 .dwr3zytn850g.cloudfront.net
 .dwxjayoxbnyrr.cloudfront.net
@@ -6166,7 +6170,6 @@
 .events.redditmedia.com
 .events.release.narrativ.com
 .events.squarespace.com
-.eventtracking.hubspot.com
 .ex-adreq-asia.vivoglobal.com
 .ex-adreq-in.vivoglobal.com
 .ex-romsp-unifyconfig.vivoglobal.com
@@ -6235,6 +6238,7 @@
 .facebook-google-vptyyny63pwfipshmm.vercel.app
 .facebook-google-ygggvmvciad74v9lhi.vercel.app
 .fair.sogou.com
+.falabella.com.data.adobedc.net
 .falabella.data.adobedc.net
 .familygiftlove.myshopify.com
 .famousfootwear.com.data.adobedc.net
@@ -6244,6 +6248,7 @@
 .fantastic-salamander-c721cb.netlify.app
 .fantuan.bz.mgtv.com
 .fanxing.kugou.com
+.fanza.yoshiclub.xyz
 .faqs-lognn-trezr.weebly.com
 .faqs-treezr-logn.weebly.com
 .fastappjump-drcn.hispace.hicloud.com
@@ -6661,7 +6666,6 @@
 .guidance.ghost.io
 .guif-eu.coloros.com
 .guif.coloros.com
-.guitarcenter.data.adobedc.net
 .gumgum.com
 .gvideo.qpic.cn
 .gvt2.com
@@ -6691,6 +6695,7 @@
 .h5collector.mihoyo.com
 .h5log-api-dualstack.mihoyo.com
 .h6.msn.com
+.h6uzemwry4.data.adobedc.net
 .haa3j9plpi-default-cn.rum.aliyuncs.com
 .haitaoad.nosdn.127.net
 .haiwai-ic.ksosoft.com
@@ -6737,7 +6742,6 @@
 .heoads.b-cdn.net
 .hermes.jd.com
 .heyue.xiaomi.com
-.hfwpz4bisq-default-cn.rum.aliyuncs.com
 .hg-statsd.setapp.com
 .hghrkhbztb.data.adobedc.net
 .hiad.myweb.hinet.net
@@ -7120,6 +7124,7 @@
 .in.zhihu.com
 .inc-visio-telemetry.officeapps.live.com
 .incoming-data-sense360.s3.amazonaws.com
+.increaserev2.static-cloudflare.workers.dev
 .indexww.com
 .india.miui.com
 .indianetouristvisacoin.wordpress.com
@@ -7247,7 +7252,6 @@
 .japfg-trending-content.uc.r.appspot.com
 .javascriptcounter.appspot.com
 .javzzy6fnh.data.adobedc.net
-.jbbwzdbgk2.data.adobedc.net
 .jcm.jd.com
 .jcollection.shuqireader.com
 .jddebug.com
@@ -7364,7 +7368,6 @@
 .kunyu.csdn.net
 .kuwaitpetroleumit.data.adobedc.net
 .kvop8mlpon.data.adobedc.net
-.kwa3a4b13f.data.adobedc.net
 .kwurl.ucweb.com
 .kxlogo.knet.cn
 .kz-cname-sin01-bigdata.vivoglobal.com
@@ -7501,6 +7504,7 @@
 .lmlicenses.wip4.adobe.com
 .lmsjy.qq.com
 .lnk0.com
+.load.s3.amazonaws.com
 .loader-cdn.azureedge.net
 .loc.map.baidu.com
 .localDOMAIN.ptlogin2.qq.com
@@ -7699,7 +7703,6 @@
 .logbk.tiktokv.com
 .logdc.happyelements.cn
 .logforward.browser.heytapmobi.com
-.logger.instagram.com
 .logger.sina.cn
 .logger.unsplash.com
 .logging-proxy-ca-production-170512-af60esna.uc.gateway.dev
@@ -8360,6 +8363,7 @@
 .ndct-data.video.iqiyi.com
 .ndstage.wpengine.com
 .nearby.3g.qq.com
+.nedbank.data.adobedc.net
 .neirong.baidu.com
 .neptune-api.volces.com
 .neptune-platform.zijieapi.com
@@ -8413,6 +8417,7 @@
 .nmetrics.samsung.com
 .nmetrics.samsungmobile.com
 .nmtracking.netflix.com
+.no-track.as93.net
 .noa.yahoo.com
 .noapy4ni0h.data.adobedc.net
 .noc-visio-telemetry.officeapps.live.com
@@ -8698,6 +8703,7 @@
 .passport-log.youku.com
 .passwordfix.blogspot.com
 .pay.mobile.sina.cn
+.paypal.pp.ua
 .paywall-prod.appspot.com
 .pb-assets.tedcdn.com
 .pb-prod-ew1-collector-lb-52702861.eu-west-1.elb.amazonaws.com
@@ -8872,7 +8878,6 @@
 .pl.thecontentserver.com.cdn.cloudflare.net
 .pl.youku.com
 .planebasin.com
-.plard-metrics-pd-dv-dev-s3.s3.us-east-1.amazonaws.com
 .platform.facebook.com
 .platform.linkedin.com
 .platform.tumblr.com
@@ -9287,6 +9292,7 @@
 .rfihub.com.akadns.net
 .rg-3tn.pages.dev
 .rh.qq.com
+.rhcvuy2die.data.adobedc.net
 .rhdc-acs.youku.com
 .rich.qq.com
 .richaudience.com
@@ -9316,6 +9322,7 @@
 .robux60ktapmeb.blogspot.com
 .robux60ktapmexu.blogspot.com
 .rocket.snssdk.com
+.roeyecdn.com
 .rogerscommunicationspartnership.data.adobedc.net
 .roi.soulapp.cn
 .romeccs.microsoft.com
@@ -9637,6 +9644,7 @@
 .segment-cdn.producthunt.com
 .segment.com
 .segment.io
+.selfhostedprivacyawarestats.futo.org
 .send.preply.com
 .senibudayasia.blogspot.com
 .senlog.cmpassport.com
@@ -9658,6 +9666,7 @@
 .sentry.bits-363.workers.dev
 .sentry.cointelegraph.com
 .sentry.csdn.net
+.sentry.d.mi.com
 .sentry.d.xiaomi.net
 .sentry.gitcode.com
 .sentry.hcaptcha.com
@@ -9971,6 +9980,7 @@
 .server-side-tagging-hg2pezcalq-uc.a.run.app
 .server-side-tagging-hg6ybwqswq-uc.a.run.app
 .server-side-tagging-higlimivlq-uc.a.run.app
+.server-side-tagging-hlpypl7jga-uc.a.run.app
 .server-side-tagging-hnytnhubzq-uc.a.run.app
 .server-side-tagging-hnzegdzrpa-uc.a.run.app
 .server-side-tagging-hobmgotkaq-uc.a.run.app
@@ -10115,7 +10125,6 @@
 .server-side-tagging-p6sczcweqa-uc.a.run.app
 .server-side-tagging-pa2qcydoqa-uc.a.run.app
 .server-side-tagging-pcrbhyajsa-uc.a.run.app
-.server-side-tagging-pd42r5yr4a-uc.a.run.app
 .server-side-tagging-pfb3tkcfna-uc.a.run.app
 .server-side-tagging-ph4bjl3uhq-uc.a.run.app
 .server-side-tagging-piacwjzpmq-uc.a.run.app
@@ -11982,6 +11991,7 @@
 .youku-acs.m.taobao.com
 .youku-crm-product.youku.com
 .yourchatgptguide.gumroad.com
+.yourtrackingserver.data.adobedc.net
 .youxi.baidu.com
 .youxi.kugou.com
 .ys-log-upload.mihoyo.com
@@ -12056,6 +12066,8 @@ adcdn.hpplay.cn
 adeng.hpplay.cn
 adsmind.gdtimg.com
 adsmind.ugdtimg.com
+adv-adlog.variflight.com
+adv-ads.variflight.com
 aid.m.taobao.com
 amdc.m.youku.com
 amsweb-cdn-gz-1258344696.file.myqcloud.com
@@ -12063,6 +12075,7 @@ api-js.mixpanel.com
 api.c.uc.cn
 api.iqiyi.com
 apiv4-iyes.youku.com
+app-ad.variflight.com
 appcloud.zhihu.com
 appcloud2.in.zhihu.com
 banners.itunes.apple.com
