--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2026-01-05 10:00:04
-# Total rules: 12171
+# Generated from relevant_rules_wildcard_aware.txt on 2026-01-05 10:49:57
+# Total rules: 12174
 
 .08438rt742.netlify.app
 .09-0-2-erguj-3e54r9gh-w0e9jv-0sd8ghv-0das9jh-0hyf.obs.ap-southeast-1.myhuaweicloud.com
@@ -2061,6 +2061,7 @@
 .analytics.twitter.com
 .analytics.uca.cloud.unity3d.com
 .analytics.umami.is
+.analytics.umetrip.com
 .analytics.unity3d.com
 .analytics.us.archive.org
 .analytics.us.tiktok.com
@@ -6330,6 +6331,7 @@
 .flashstats.libsyn.com
 .flask.us.nextdoor.com
 .flex.msn.com
+.flightstatus.umetrip.com
 .flipdish-cookie-consent.s3-eu-west-1.amazonaws.com
 .floor.bz.mgtv.com
 .flowplus.meituan.net
@@ -7005,6 +7007,7 @@
 .ifsk2.tanx.com
 .igcum80w74.data.adobedc.net
 .igexin.com
+.iha-analytics.vercel.app
 .ikcart.alipay.com
 .ikcode.baidu.com
 .ilce.alicdn.com
