--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2026-01-06 09:56:29
-# Total rules: 12132
+# Generated from relevant_rules_wildcard_aware.txt on 2026-01-06 14:21:42
+# Total rules: 12134
 
 .08438rt742.netlify.app
 .09-0-2-erguj-3e54r9gh-w0e9jv-0sd8ghv-0das9jh-0hyf.obs.ap-southeast-1.myhuaweicloud.com
@@ -4030,6 +4030,7 @@
 .d1nh2vjpqpfnin.cloudfront.net
 .d1nkcqm1nusqof.cloudfront.net
 .d1nkvehlw5hmj4.cloudfront.net
+.d1nmhytiylvrwa.cloudfront.net
 .d1nmxiiewlx627.cloudfront.net
 .d1nnhbi4g0kj5.cloudfront.net
 .d1now6cui1se29.cloudfront.net
@@ -6891,6 +6892,7 @@
 .i-cn01a.ocloud.heytapmobi.com
 .i-lq.snssdk.com
 .i-sg01a.ocloud.heytapmobi.com
+.i.eporner.com
 .i.mail.qq.com
 .i.moshimo.com
 .i.paypal.com
